--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,20 @@
 appdirs==1.4.3
 attrs==18.1.0
-certifi==2018.8.13
+bcrypt==3.1.4
+bugsnag==3.4.3
+certifi==2018.8.24
+cffi==1.11.5
 chardet==3.0.4
 click==6.7
+decorator==4.3.0
 flake8==3.5.0
 Flask==1.0.2
+Flask-Bcrypt==0.7.1
+Flask-Login==0.4.1
+Flask-SQLAlchemy==2.3.2
+Flask-WTF==0.14.2
+future==0.16.0
+geocoder==1.38.1
 gunicorn==19.9.0
 idna==2.7
 itsdangerous==0.24
@@ -13,10 +23,17 @@ MarkupSafe==1.0
 mccabe==0.6.1
 mypy==0.620
 pycodestyle==2.3.1
+pycparser==2.18
 pyflakes==1.6.0
 python-dotenv==0.9.1
+pytz==2018.5
+ratelim==0.1.6
 requests==2.19.1
+six==1.11.0
+SQLAlchemy==1.2.11
 toml==0.9.4
 typed-ast==1.1.0
 urllib3==1.23
+WebOb==1.8.2
 Werkzeug==0.14.1
+WTForms==2.2.1
